# rag_test

./: .dockerignore  .env  Dockerfile  README.md  app.py  docker-compose.yml  ingest.py  init.sql  pyproject.toml
data/: docs.py  samples.txt
data/docs/: 1.md  2.md  3.md
pipeline/: generation.py  request_handler.py  retrieval.py  security.py  validation.py
services/: llm_client.py  vector_store.py
