[project]
name = "rag-api"
version = "0.1.0"
description = "Simple test of a Retrieval Augmented Generation endpoint"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "python-dotenv",
    "numpy",
    "scikit-learn",
    "requests",
    "psycopg2[binary]>=2.9.12",
    "pgvector>=0.4.2",
]
